add slippage
